--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
     <script src="./index.js" defer></script>
   </head>
   <body>
-    <div id="root">
+    <form id="root">
       <div class="container">
         <div class="buttons-container">
         <button class="button" id="minus-button">-</button>
         <p class="counter" >0</p>
         <button class="button" id="plus-button">+</button>
         </div>
-        <button class="reset-button">RESET</button>
       </div>
-    </div>
+    </form>
   </body>
 </html>
