--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <script src="./index.js" defer></script>
   </head>
   <body>
-    <form id="root">
-      <div class="container">
+    <div id="root">
+      <form class="container">
         <div class="buttons-container">
         <button class="button" id="minus-button">-</button>
         <p class="counter" >0</p>
         <button class="button" id="plus-button">+</button>
         </div>
-      </div>
-    </form>
+      </form>
+    </div>
   </body>
 </html>
